# rusthex

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MCP.md  README.md  VIMMODE.md  about.hbs  about.toml  build.rs  todo.md
.github/workflows/: release.yml
assets/: licenses.txt
crates/binary-analysis/: Cargo.toml
crates/binary-analysis/src/: distribution.rs  entropy.rs  lib.rs  signature.rs
crates/pattern-lang/: Cargo.toml  README.md
crates/pattern-lang/src/: error.rs  lib.rs  name.rs  span.rs
crates/pattern-lang/src/eval/: data_source.rs  expr.rs  mod.rs  pattern.rs  read_type.rs  scope.rs  stmt.rs  value.rs
crates/pattern-lang/src/lexer/: mod.rs  token.rs
crates/pattern-lang/src/parser/: ast.rs  mod.rs
crates/pattern-lang/src/preprocessor/: mod.rs
crates/pattern-lang/src/stdlib/: bit.rs  core.rs  io.rs  limits.rs  math.rs  mem.rs  mod.rs  string.rs
crates/pattern-lang/tests/: hexpat_eval.rs  hexpat_files.rs  includes_eval.rs  integration.rs
crates/rusthex-ipc/: Cargo.toml
crates/rusthex-ipc/src/: lib.rs
crates/rusthex-mcp/: Cargo.toml
crates/rusthex-mcp/src/: main.rs  tools.rs
scripts/: build.bat  package-macos.sh
src/: actions.rs  bitmap.rs  bookmark.rs  compare.rs  config.rs  cursor.rs  document.rs  encoding.rs  file_ops.rs  goto_address.rs  input.rs  inspector.rs  ipc.rs  keyboard.rs  log_panel.rs  main.rs  pattern.rs  render.rs  render_cache.rs  search.rs  tab.rs  tabs.rs  theme.rs  ui.rs  vim.rs  windows_menu.rs
