[package]
name = "rusthex"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.4.0"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
encoding_rs = "0.8"
memchr = "2.7"
image = "0.25"
smallvec = "1.15"

[dev-dependencies]
tempfile = "3"
