[workspace]
members = ["crates/pattern-lang", "crates/rusthex-mcp", "crates/rusthex-ipc"]
resolver = "2"

[package]
name = "rusthex"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.4.0"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
encoding_rs = "0.8"
memchr = "2.7"
image = "0.25"
smallvec = "1.15"
pattern-lang = { path = "crates/pattern-lang" }
rusthex-ipc = { path = "crates/rusthex-ipc" }
serde_json = "1"
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }

[dev-dependencies]
tempfile = "3"
